Add sell_by_date to apartment list endpoint
